--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,9 @@
 <p><%= notice %></p>
 
 <h2><%= @question.title %></h2>
+
+<ul>
+<% @question.answers.each do | answer | %>
+  <li><%= answer.description %></li><br>
+  <% end %>
+</ul>
