--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,7 +3,7 @@
 <h2><%= @question.title %></h2>
 
 <ul>
-<% @question.answers.each do | answer | %>
-  <li><%= answer.description %></li><br>
+  <% @question.answers.each do | answer | %>
+    <li><%= link_to answer.description, answer_path(answer.id) %></li><br>
   <% end %>
 </ul>
