--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,8 +3,14 @@
 <h2><%= @question.title %></h2>
 
 <ul>
-  <% @question.answers.each do | answer | %>
-    <li><%= link_to answer.description,
-      answer_path(answer.id), method: :patch %></li><br>
+  <% if @cookie %>
+    <% @question.answers.each do | answer | %>
+      <li><%= answer.description + answer.count.to_s %></li><br>
+    <% end %>
+  <% else %>
+    <% @question.answers.each do | answer | %>
+      <li><%= link_to answer.description,
+        answer_path(answer.id), method: :patch %></li><br>
+    <% end %>
   <% end %>
 </ul>
