--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,5 @@
+<section class="row">
+    <div class="container">
 <p><%= notice %></p>
 
 <h2><%= @question.title %></h2>
@@ -14,3 +16,5 @@
     <% end %>
   <% end %>
 </ul>
+</div>
+</section>
