Validate presence of answers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
 <body>
   <header class="primary-header container group">
-      <h1 class="logo"><a href="new.html.erb">Poller</a></h1>
+      <h1 class="logo"><%= link_to 'Poller', new_question_path %></h1>
       <nav class="nav primary-nav">
       </nav>
     </header>
