--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -102,6 +102,10 @@ aside {
   section.user_info {
     margin-top: 20px;
   }
+  section.question_info {
+    margin-top: 20px;
+    overflow:  visible;
+  }
   section {
     padding: 10px 0;
     margin-top: 20px;
@@ -120,6 +124,9 @@ aside {
       letter-spacing: -1px;
       margin-bottom: 3px;
       margin-top: 0px;
+    }
+    dl {
+      margin-top: 20px;
     }
   }
 }
