--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,6 +55,17 @@ p {
 
 /* header */
 
+header {
+  background-image:url('http://www.solidbackgrounds.com/images/1920x1080/1920x1080-white-solid-color-background.jpg');
+  background-repeat:no-repeat;
+  position:fixed;
+	z-index:3;
+	top:0px;
+	left:0px;
+  width:100%;
+  height:50px;
+}
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -194,4 +205,15 @@ input {
   -moz-box-sizing:    border-box;
   -webkit-box-sizing: border-box;
   box-sizing:         border-box;
+}
+
+.cover-image {
+  background: $gray-light url('http://en.freejpg.com.ar/asset/900/d2/d204/F100007661.jpg') fixed;
+  background-size: 100%;
+  height: 100%;
+  z-index:1;
+  .text-center {
+    margin-top: 14%;
+    margin-bottom: 14%;
+  }
 }
