--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,9 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to "Create Poll", new_question_path %></li>
-          <li><%= link_to "Users", users_path %></li>
+          <% if current_user.admin? && !current_user?(user) %>
+            <li><%= link_to "Users", users_path %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
