--- a/app/views/static_pages/home.html
+++ b/app/views/static_pages/home.html
@@ -1,16 +1,26 @@
-<div class="cover-image">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h1 class="text-inverse">Welcome to Poller!</h1>
-        <p class="text-inverse">Time to find compromises.</p>
-        <br>
-        <% if logged_in? %>
-          <%= link_to "Create Poll", new_question_path, class: "btn btn-primary" %>
-        <% else %>
-          <%= link_to "Log in", login_path, class: "btn btn-primary" %>
-        <% end %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-12 text-center">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+  <div class="cover-image">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1 class="text-inverse">Welcome to Poller!</h1>
+          <p class="text-inverse">Time to find compromises.</p>
+          <br>
+          <% if logged_in? %>
+            <%= link_to "Create Poll", new_question_path, class: "btn btn-primary" %>
+          <% else %>
+            <%= link_to "Log in", login_path, class: "btn btn-primary" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
