--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,12 +147,12 @@ aside {
   }
 }
 
-.gravatar {
+.avatar {
   float: left;
   margin-right: 10px;
 }
 
-.gravatar_edit {
+.avatar_edit {
   margin-top: 15px;
 }
 
@@ -261,7 +261,7 @@ input {
     display: block;
     margin-left: 5px;
   }
-  .gravatar {
+  .avatar {
     float: left;
     margin-right: 10px;
     margin-top: 5px;
