--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,4 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
+<avatar><%= image_tag current_user.avatar.url(:thumb) %></avatar>
 <h1><%= current_user.name %></h1>
 <span><%= link_to "view my polls", current_user %></span>
 <span><%= link_to "create new poll", new_question_path %></span>
