--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,7 @@
+<!-- TODO fix path -->
 <li>
-  <%= gravatar_for user, size: 50 %>
-  <%= link_to user.name, user %>
+  <%= image_tag user.avatar.url(:thumb) %>
+  <%= link_to user.name, user_path(user) %>
   <% if current_user.admin? && !current_user?(user) %>
     <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
   <% end %>
